--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:theme="@style/Theme.MovieDB"
         tools:targetApi="31">
         <activity
-            android:name="com.indocyber.moviedb.activity.RootActivity"
+            android:name="com.indocyber.moviedb.activity.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.indocyber.moviedb.activity.RootActivity"
+            android:exported="true"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
